Thu Jan  1 17:23:44 UTC 2004  Don Hinton  <dhinton@dresystems.com>

        * Makefile:
          Moved coreclean target to bottom of file so that the all target
          will come first.  Added ALT_DIRS variable that contains CIDLC,
          examples, and tests directories that should not be built by
          default.  Set the DIRS variable = CORE_DIRS by default and add
          ALT_DIRS only if BOOST_ROOT and UTILITY_ROOT have been set.
          This will need to be adjusted a bit, since the ALT_DIRS don't
          have regular Makefiles right now, but it's a start and will
          allow all the *nix builds to start building the CORE_DIRS in the
          regular autobuilds.

        * ciao/Makefile:
        * ciao/Makefile.CIAO_Client:
        * ciao/Makefile.CIAO_Container:
        * ciao/Makefile.CIAO_Server:
        * tools/Makefile:
        * tools/Assembly_Deployer/Makefile:
        * tools/Assembly_Deployer/Makefile.Assembly_Deployer:
        * tools/Assembly_Deployer/Makefile.Assembly_Manager:
        * tools/ComponentServer/Makefile:
        * tools/ComponentServer/Makefile.ComponentServer:
        * tools/ComponentServer/Makefile.ComponentServer_test_client:
        * tools/Daemon/Makefile:
        * tools/Daemon/Makefile.CIAO_Daemon:
        * tools/Daemon/Makefile.DaemonController:
        * tools/RTComponentServer/Makefile:
        * tools/RTComponentServer/Makefile.RTComponentServer:
        * tools/ServerActivator/Makefile:
        * tools/ServerActivator/Makefile.ServerActivator:
        * tools/ServerActivator/Makefile.ServerActivator_test_client:
        * tools/Simple_Component_Server/Makefile:
        * tools/Simple_Component_Server/Makefile.Simple_Component_Server:
        * tools/Simple_Component_Server/Makefile.Simple_Component_Server_test_client:
        * tools/Simple_Component_Server/Makefile.Simple_Server_Stub:
        * tools/XML_Helpers/Makefile:
        * tools/XML_Helpers/Makefile.Helper_Test: